--- a/NotificationScheduling.Web/Properties/launchSettings.json
+++ b/NotificationScheduling.Web/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      //"launchUrl": "swagger",
+      "launchUrl": "fetch-data",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
